# sriquant-ai

./: .gitignore  Cargo.toml  Makefile  README.md  test_connection.rs
config/exchanges/: binance_production.yaml  binance_testnet.yaml
crates/core/: Cargo.toml
crates/core/src/: cpu.rs  fixed.rs  id_gen.rs  lib.rs  logging.rs  runtime.rs  timing.rs
crates/exchanges/: Cargo.toml
crates/exchanges/src/: errors.rs  http.rs  lib.rs  traits.rs  types.rs  websocket.rs
crates/exchanges/src/binance/: auth.rs  connection.rs  mod.rs  rest.rs  types.rs  user_stream.rs  websocket.rs
docs/: README_CREDENTIALS.md  binance_api_guide.md  setup_credentials.md
scripts/: remove_furnace.sh  run_user_stream_demo.sh  setup_env.sh
tests/: Cargo.toml  README.md
tests/benchmarks/: performance_benchmark.rs
tests/binance/: test_credentials.rs
tests/examples/: binance_advanced.rs  binance_basic.rs  binance_user_stream.rs  binance_websocket.rs  place_simple_order.rs  place_test_orders.rs  user_stream_with_orders.rs
tests/src/: binance_rest_tests.rs  lib.rs
tests/tls/: test_tls.rs
tests/unit/: gtest_style_tests.rs
