[package]
name = "sriquant-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# SriQuant.ai components
sriquant-core = { path = "../crates/core" }
sriquant-exchanges = { path = "../crates/exchanges" }

# Async runtime (monoio only)
monoio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Environment loading
dotenv = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Testing frameworks (Rust native - better than gtest)
tokio-test = "0.4"
rstest = "0.18"           # Parameterized tests like gtest TEST_P
proptest = "1.0"          # Property-based testing
criterion = "0.5"         # Benchmarking (better than gtest benchmarks)
mockall = "0.11"          # Mocking framework
serial_test = "3.0"       # Sequential test execution

# Examples - runnable demos
[[example]]
name = "binance_basic"
path = "examples/binance_basic.rs"

[[example]]
name = "binance_advanced"
path = "examples/binance_advanced.rs"

[[example]]
name = "binance_websocket"
path = "examples/binance_websocket.rs"

# Benchmarks
[[bench]]
name = "performance_benchmark"
path = "benchmarks/performance_benchmark.rs"
harness = false

# Integration test binaries
[[bin]]
name = "test_credentials"
path = "binance/test_credentials.rs"

[[bin]]
name = "test_tls"
path = "tls/test_tls.rs"